# ekiti

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
data/: indonesian_animals.csv  sample_german.yaml
scripts/: seed_data.py
src/ekiti/: __init__.py  __main__.py
src/ekiti/cli/: main.py
src/ekiti/core/: quiz.py  storage.py
src/ekiti/models/: word.py
