[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ekiti"
version = "0.1.0"
description = "Ekiti (會記得) - A flashcard app for language learning"
readme = "README.md"
requires-python = ">=3.8"

[tool.ruff]
# These settings will be overridden by ruff.toml, but kept for PEP 621 compliance
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "B", "C4", "UP"]
fixable = ["ALL"]
unsafe-fixes = true

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
known-first-party = ["ekiti"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "sqlmodel>=0.0.8",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.7",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
    "pre-commit>=3.0.0"
]

[project.scripts]
ekiti = "ekiti.cli.main:app"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
